Prepare to insert license